--- a/sample.docker-compose.yml
+++ b/sample.docker-compose.yml
@@ -1,40 +1,41 @@
-version: '2'
+version: '3'
 
 services:
   piwik-db:
     image: mysql:5.7
+    container_name: piwik-db
     ports:
       - "{db-external-port}:3306"
     volumes:
       - ./mysql/runtime:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: {db-pass}
-    network_mode: "bridge"
+    networks:
+       - nginx
     restart: always
+    deploy:
+       resources:
+         limits:
+           cpus: '1.0'
+           memory: 500m
   app:
-    image: piwik:3.0.0
+    image: piwik:3.3.0-fpm
+    container_name: piwik
     links:
       - piwik-db
     volumes:
       - ./html:/var/www/html
     environment:
        VIRTUAL_HOST: {virtual-host}
-    network_mode: "bridge"
+    networks:
+       - nginx
     restart: always
-  cron:
-    image: piwik:3.0.0
-    links:
-      - piwik-db
-    volumes_from:
-      - app
-      #- ./html:/var/www/html
-    entrypoint: |
-      bash -c 'bash -s <<EOF
-      trap "break;exit" SIGHUP SIGINT SIGTERM
-      while /bin/true; do
-        su -s "/bin/bash" -c "/usr/local/bin/php /var/www/html/console core:archive" www-data
-        sleep 3600
-      done
-      EOF'
-    network_mode: "bridge"
-    restart: always
+    deploy:
+       resources:
+         limits:
+           cpus: '1.0'
+           memory: 200m
+
+networks:
+  nginx:
+     external: true
